--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@splinetool/react-spline": "^4.1.0",
+    "@splinetool/runtime": "^1.12.58",
     "@tailwindcss/vite": "^4.2.0",
     "clsx": "^2.1.1",
     "gsap": "^3.14.2",
